# budgie-cputemp-applet

./: README.md  meson.build
assets/: io.github.tarkah.budgie-cputemp-applet.metainfo.xml  meson.build
plugin/: CpuTempApplet.plugin  CpuTempApplet.vala  Sensors.vala  com.github.tarkah.budgie-cputemp-applet.gschema.xml  dev.tarkah.cputemp.gschema.xml  meson.build  plugin.gresource.xml  settings.ui
